# PnMPI

./: .travis.yml  CMakeLists.txt
doc/: CMakeLists.txt  doxygen.conf.in
doc/latex/: footer.tex  header.tex
src/: core.c  pnmpimod.h  try-catch.h  wrapper.c  wrapper.h.w  wrapper_c.c.w
src/pnmpi/: CMakeLists.txt  wrapper.c
src/pnmpi/debug/: debug_io.h  print_debug.c  print_error.c  print_warning.c
src/pnmpi/service/: callHook.c  service.h
src/pnmpi/wrapper/: CMakeLists.txt  finalize.c  init.c  wrapper.h
wrap/: wrap.py
